[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bioprover"
version = "0.1.0"
description = "CEGAR-based verification and parameter repair for synthetic biology circuits"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "BioProver Team"},
]
keywords = ["synthetic-biology", "verification", "CEGAR", "temporal-logic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "sympy>=1.9",
    "networkx>=2.6",
    "z3-solver>=4.8",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.4"]
dev = ["pytest>=7.0", "pytest-cov>=3.0", "mypy>=0.950", "ruff>=0.1"]
docs = ["sphinx>=4.0", "sphinx-rtd-theme>=1.0"]

[project.scripts]
bioprover = "bioprover.cli:main"

[project.urls]
Homepage = "https://github.com/bioprover/bioprover"
Repository = "https://github.com/bioprover/bioprover"
Documentation = "https://bioprover.readthedocs.io"

[tool.setuptools.packages.find]
include = ["bioprover*"]
